--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>
     BMI Calculator
   </h1>
-  <img src="avocado-exercise.png" alt="avocado-exercise" height="200">
+  <img src="/assets/avocado-exercise.png" alt="avocado-exercise" height="200">
   <p>*Prompt dialogs will appear to ask for your height (in metres) and weight (in kg).*</p>
   <button onclick="calculateBMI()">Get Started!</button>
   <script src="script.js"></script>
